# pythonic-modern-cpp

./: .gitignore  README.md  SUMMARY.md  book.js  book.json  first-question.md  user-template.hbs
_vendor/boost/: update.py
_vendor/boost/include/: module.modulemap
_vendor/catch-ext/include/: catch_ext.hpp
_vendor/folly/: update.py
_vendor/folly/include/: module.modulemap
_vendor/folly/include/folly/: FBVector.h  Malloc.h  Portability.h  folly-config.h
_vendor/pythonic/include/: module.modulemap  pythonic
_vendor/pythonic/include/pythonic/: regexs.hpp  strings.hpp  utf8.hpp
_vendor/range-v3/include/range/v3/view/: view.hpp
_vendor/utf_ranges/: update.py
_vendor/utf_ranges/include/: module.modulemap
_vendor/utf_ranges/include/tcb/utf_ranges/: view.hpp
_vendor/utf_ranges/include/tcb/utf_ranges/detail/: utf.hpp
functional/: 001.md  003.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  CMakeLists.txt  aaa.md  build.sh  main.cpp  main.py
pythonic/: README.md  len.hpp  regexs.hpp  utf8.hpp
pythonic/utf8/: Utf8Encoded.hpp  capitalize.hpp  center.hpp  code_points.hpp  code_units.hpp  count.hpp  endswith.hpp  expandtabs.hpp  find.hpp  finditer.hpp  index.hpp  sub.hpp
string/: 002.md  004.md  005.md  008.md  009.md  010.md  011.md  013.md  014.md  015.md  CMakeLists.txt  build.sh  main.cpp  main.py  pythonic
styles/: website.css
